# voice-chatbot

./: .env.example  .gitignore  Makefile  README.md  app.py  chatterbox_tts.py  config.yaml  install_mac.sh  persona_router.py  personas.yaml  requirements.txt  run.sh  server.py  todo.md  wakeword_detector.py
config/: __init__.py  loader.py  schema.py  shell.py
devices/rpi5/: README.md  install_librespot.sh  install_rpi.sh  install_service.sh  list_alsa_devices.py  requirements.txt  rpi-voice.env.example  rpi-voice.service  rpi_webrtc_voice.py  setup_alsa_sharing.sh  wake.py  wake_test.py  webrtc_loopback_server.py
docs/: comparison.md  esp32.md  telegram.md  web-rtc.md
firmware/box3/: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig.defaults
firmware/box3/main/: CMakeLists.txt  audio_pipeline.c  audio_pipeline.h  config.h  idf_component.yml  main.c  ui.c  ui.h  wakeword.c  wakeword.h  wakeword_tflm.cc  webrtc_client.c  webrtc_client.h
firmware/box3/main/models/: README.md
models/wakeword/: hey_babel.onnx  hey_babel.tflite  hey_marvin.onnx  hey_marvin.tflite  (+2 more)
scripts/: _audio_devices.py  bbc_shows.py  chatterbox_health.py  list_audio_devices.py  mic_test.py  pipeline_audio_test.py  radio.py  setup_chatterbox.sh  setup_stable_audio.sh  setup_woosh.sh  spotify.py  stable_audio_server.py  start_chatterbox.sh  start_stable_audio.sh  start_woosh.sh
skills/: __init__.py  _context.py  _filter.py  _loader.py  _tracker.py
voices/: README.md
web/: client.js  index.html
webrtc_smoke/: README.md  requirements.txt  server.py
(+56 files in other folders)
